Added stargazers_count to portfolio page, added linkedin link, changes to css, added favicon, added svg

--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <script src="https://kit.fontawesome.com/a076d05399.js"></script>
-  <title>Marcel Rossi</title>
+  <title>Marcel Rossi - Frontend utvecklare Stockholm</title>
 </head>
 
 <body>
